develop JavaBckPython-NormalizeFront-OptimizeNDVIpng-S3
